--- a/src/styles/components/_Home.scss
+++ b/src/styles/components/_Home.scss
@@ -77,11 +77,9 @@
             }
             .property-list {
                 padding-top: 1rem;
-                
                 color: #fff;
                 .property {
                     height: 27vh;
-                    border: 1px solid green;
                     width: 95%;
                     margin: 0 auto;
                     display: flex;
@@ -89,11 +87,10 @@
                 .property-img {
                     height: 100%;
                     width: 25%;
-                    img{
+                    img {
                         width: 100%;
                         height: 100%;
                     }
-                    border: 1px solid orange;
                 }
                 .property-details {
                     display: flex;
@@ -106,7 +103,7 @@
                         margin-top: 0.35rem;
                         font-size: 1.1rem;
                     }
-                    & > div{
+                    &>div {
                         padding: 0.75rem;
                         border: 1px solid $btn-grey;
                     }
@@ -120,21 +117,22 @@
                         width: 40%;
                     }
                     .property-actions {
-                        border: 1px solid $btn-grey;;
+                        border: 1px solid $btn-grey;
+                        ;
                         width: 8%;
                         display: flex;
                         flex-direction: column;
                         justify-content: center;
                         align-items: center;
-                        .action{
-                            &:hover{
+                        .action {
+                            &:hover {
                                 cursor: pointer;
                             }
-                            i{
+                            i {
                                 font-size: 1.5rem;
                             }
                         }
-                        .action:first-child{
+                        .action:first-child {
                             margin-bottom: 2rem;
                         }
                     }
