--- a/src/styles/components/_PropertyWizard.scss
+++ b/src/styles/components/_PropertyWizard.scss
@@ -143,7 +143,7 @@
             margin: 5% 0;
             img {
                 height: 100%;
-                width: auto;
+                width: 100%;
             }
         }
         .property-section {
