--- a/src/styles/components/_Home.scss
+++ b/src/styles/components/_Home.scss
@@ -88,13 +88,15 @@
             }
             .pagination {
                 display: flex;
-           
                 width: 20%;
                 justify-content: space-between;
                 align-items: center;
                 position: relative;
                 float: right;
                 .pagination-button {
+                    &:hover{
+                        cursor: pointer;
+                    }
                     i {
                         font-size: 2rem;
                         color: #fff;
