Reset the results of the properties searched for back to its original state

--- a/src/styles/components/_PropertySearch.scss
+++ b/src/styles/components/_PropertySearch.scss
@@ -25,9 +25,9 @@
     }
     .search-button {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         button {
-            width: 75%;
+            width: 45%;
             margin-top: 1.5rem;
             padding: 5px 0;
             text-align: center;
