--- a/src/styles/components/_Home.scss
+++ b/src/styles/components/_Home.scss
@@ -119,57 +119,137 @@
                     width: 95%;
                     margin: 0 auto;
                     display: flex;
-                }
-                .property-img {
-                    height: 100%;
-                    width: 25%;
-                    img {
-                        width: 100%;
+                    .modal-container {
                         height: 100%;
-                    }
-                }
-                .property-details {
-                    display: flex;
-                    width: 75%;
-                    h5 {
-                        text-align: center;
-                        font-size: 1.25rem;
-                    }
-                    p {
-                        margin-top: 0.35rem;
-                        font-size: 1.1rem;
-                    }
-                    &>div {
-                        padding: 0.75rem;
-                        border: 1px solid $btn-grey;
-                    }
-                    .property-address {
-                        width: 32%;
-                    }
-                    .property-rent {
-                        width: 20%;
-                    }
-                    .property-tenants {
-                        width: 40%;
-                    }
-                    .property-actions {
-                        border: 1px solid $btn-grey;
                         ;
-                        width: 8%;
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: center;
-                        align-items: center;
-                        .action {
-                            &:hover {
-                                cursor: pointer;
+                        div div:nth-child(1) {
+                            left: 1% !important;
+                        }
+                        .modal-content {
+                            display: flex;
+                            height: 100%;
+                            .modal-property-img {
+                                width: 50%;
+                                height: 100%;
+                                img {
+                                    width: 100%;
+                                    height: 100%;
+                                }
                             }
-                            i {
-                                font-size: 1.5rem;
+                            .modal-property-form {
+                                width: 50%;
+                                background-color: #344055;
+                                height: 100%;
+                                padding-bottom: 1rem;
+                                overflow-y: scroll;
+                                
+                                .form-header {
+                                    background-color: #2E6B8D;
+                                    padding: 3% 0;
+                                    text-align: center;
+                                    h3 {
+                                        font-size: 1.75rem;
+                                    }
+                                }
+                                .form-group {
+                                    padding: 0 1rem;
+                                    .group-header {
+                                        width: 100%;
+                                        h5 {
+                                            font-size: 1.25rem;
+                                            margin: 2% 0;
+                                        }
+                                    }
+                                    .input-group {
+                                        display: flex;
+                                        flex-direction: column;
+                                        margin-bottom: 2%;
+                                        label{
+                                            margin-bottom: 0.25rem;
+                                        }
+                                        input{
+                                            border-radius: 5px;
+                                            padding: 5px 3px;
+                                        }
+                                    }
+                                }
+                                .form-group:nth-child(1) {
+                                    display: flex;
+                                    justify-content: space-between;
+                                    flex-wrap: wrap;
+                                    .input-group {
+                                        // border: 1px solid red;
+                                        width: 47%;
+                                    }
+                                }
+                                .form-submit{
+                                    
+                                    margin-top: 1rem;
+                                    display: flex;
+                                    justify-content: center;
+                                    button{
+                                        padding: 5px;
+                                        width: 25%;
+                                        border-radius: 5px;
+                                    }
+                                    button:first-child{
+                                        margin-right: 5%;
+                                    }
+                                }
                             }
                         }
-                        .action:first-child {
-                            margin-bottom: 2rem;
+                    }
+                    .property-img {
+                        height: 100%;
+                        width: 25%;
+                        img {
+                            width: 100%;
+                            height: 100%;
+                        }
+                    }
+                    .property-details {
+                        display: flex;
+                        width: 75%;
+                        h5 {
+                            text-align: center;
+                            font-size: 1.25rem;
+                        }
+                        p {
+                            margin-top: 0.35rem;
+                            font-size: 1.1rem;
+                        }
+                        &>div {
+                            padding: 0.75rem;
+                            border: 1px solid $btn-grey;
+                        }
+                        .property-address {
+                            width: 32%;
+                        }
+                        .property-rent {
+                            width: 20%;
+                        }
+                        .property-tenants {
+                            width: 40%;
+                        }
+                        .property-actions {
+                            border: 1px solid $btn-grey;
+                            ;
+                            width: 8%;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            .action {
+                                &:hover {
+                                    cursor: pointer;
+                                }
+                                i {
+                                    font-size: 1.5rem;
+                                }
+                            }
+                            .action:first-child {
+                                margin-bottom: 2rem;
+                            }
                         }
                     }
                 }
