--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -475,43 +475,100 @@ template {
           width: 95%;
           margin: 0 auto;
           display: flex; }
-        .component-home .property-view .property-list-container .property-list .property-img {
-          height: 100%;
-          width: 25%; }
-          .component-home .property-view .property-list-container .property-list .property-img img {
-            width: 100%;
+          .component-home .property-view .property-list-container .property-list .property .modal-container {
             height: 100%; }
-        .component-home .property-view .property-list-container .property-list .property-details {
-          display: flex;
-          width: 75%; }
-          .component-home .property-view .property-list-container .property-list .property-details h5 {
-            text-align: center;
-            font-size: 1.25rem; }
-          .component-home .property-view .property-list-container .property-list .property-details p {
-            margin-top: 0.35rem;
-            font-size: 1.1rem; }
-          .component-home .property-view .property-list-container .property-list .property-details > div {
-            padding: 0.75rem;
-            border: 1px solid #4D5765; }
-          .component-home .property-view .property-list-container .property-list .property-details .property-address {
-            width: 32%; }
-          .component-home .property-view .property-list-container .property-list .property-details .property-rent {
-            width: 20%; }
-          .component-home .property-view .property-list-container .property-list .property-details .property-tenants {
-            width: 40%; }
-          .component-home .property-view .property-list-container .property-list .property-details .property-actions {
-            border: 1px solid #4D5765;
-            width: 8%;
+            .component-home .property-view .property-list-container .property-list .property .modal-container div div:nth-child(1) {
+              left: 1% !important; }
+            .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content {
+              display: flex;
+              height: 100%; }
+              .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-img {
+                width: 50%;
+                height: 100%; }
+                .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-img img {
+                  width: 100%;
+                  height: 100%; }
+              .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form {
+                width: 50%;
+                background-color: #344055;
+                height: 100%;
+                padding-bottom: 1rem;
+                overflow-y: scroll; }
+                .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form .form-header {
+                  background-color: #2E6B8D;
+                  padding: 3% 0;
+                  text-align: center; }
+                  .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form .form-header h3 {
+                    font-size: 1.75rem; }
+                .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form .form-group {
+                  padding: 0 1rem; }
+                  .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form .form-group .group-header {
+                    width: 100%; }
+                    .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form .form-group .group-header h5 {
+                      font-size: 1.25rem;
+                      margin: 2% 0; }
+                  .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form .form-group .input-group {
+                    display: flex;
+                    flex-direction: column;
+                    margin-bottom: 2%; }
+                    .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form .form-group .input-group label {
+                      margin-bottom: 0.25rem; }
+                    .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form .form-group .input-group input {
+                      border-radius: 5px;
+                      padding: 5px 3px; }
+                .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form .form-group:nth-child(1) {
+                  display: flex;
+                  justify-content: space-between;
+                  flex-wrap: wrap; }
+                  .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form .form-group:nth-child(1) .input-group {
+                    width: 47%; }
+                .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form .form-submit {
+                  margin-top: 1rem;
+                  display: flex;
+                  justify-content: center; }
+                  .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form .form-submit button {
+                    padding: 5px;
+                    width: 25%;
+                    border-radius: 5px; }
+                  .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form .form-submit button:first-child {
+                    margin-right: 5%; }
+          .component-home .property-view .property-list-container .property-list .property .property-img {
+            height: 100%;
+            width: 25%; }
+            .component-home .property-view .property-list-container .property-list .property .property-img img {
+              width: 100%;
+              height: 100%; }
+          .component-home .property-view .property-list-container .property-list .property .property-details {
             display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center; }
-            .component-home .property-view .property-list-container .property-list .property-details .property-actions .action:hover {
-              cursor: pointer; }
-            .component-home .property-view .property-list-container .property-list .property-details .property-actions .action i {
-              font-size: 1.5rem; }
-            .component-home .property-view .property-list-container .property-list .property-details .property-actions .action:first-child {
-              margin-bottom: 2rem; }
+            width: 75%; }
+            .component-home .property-view .property-list-container .property-list .property .property-details h5 {
+              text-align: center;
+              font-size: 1.25rem; }
+            .component-home .property-view .property-list-container .property-list .property .property-details p {
+              margin-top: 0.35rem;
+              font-size: 1.1rem; }
+            .component-home .property-view .property-list-container .property-list .property .property-details > div {
+              padding: 0.75rem;
+              border: 1px solid #4D5765; }
+            .component-home .property-view .property-list-container .property-list .property .property-details .property-address {
+              width: 32%; }
+            .component-home .property-view .property-list-container .property-list .property .property-details .property-rent {
+              width: 20%; }
+            .component-home .property-view .property-list-container .property-list .property .property-details .property-tenants {
+              width: 40%; }
+            .component-home .property-view .property-list-container .property-list .property .property-details .property-actions {
+              border: 1px solid #4D5765;
+              width: 8%;
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center; }
+              .component-home .property-view .property-list-container .property-list .property .property-details .property-actions .action:hover {
+                cursor: pointer; }
+              .component-home .property-view .property-list-container .property-list .property .property-details .property-actions .action i {
+                font-size: 1.5rem; }
+              .component-home .property-view .property-list-container .property-list .property .property-details .property-actions .action:first-child {
+                margin-bottom: 2rem; }
 
 .component-property-search h4,
 .component-property-search h5 {
