--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,5 +3,5 @@
 @import './components/Home';
 @import './components/PropertySearch';
 @import './components/PropertyWizard';
-@import './components/JobsView';
+@import './components/WorkOrders';
 @import './components/Transactions';
