--- a/src/styles/components/_WorkOrders.scss
+++ b/src/styles/components/_WorkOrders.scss
@@ -37,21 +37,28 @@
         height: 89vh;
         color: #fff;
         .add-job {
+            height: 100%;
             .job-order-form {
-                border: 1px solid green;
+                border: 3px solid green;
                 width: 90%;
+                height: 100%;
                 margin: 0 auto;
                 .form-header {
                     text-align: center;
                     border: 1px solid red;
-                    padding: 1rem 0;
+                    height: 10%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                     h4 {
                         font-size: 1.5rem;
                     }
                 }
                 .form-body {
                     padding: 0 2rem;
-                    height: 100%;
+                    height: 70%;
+                    margin-top: 2%;
+                    border: 3px solid orange;
                     display: flex;
                     justify-content: space-between;
                     h5 {
@@ -80,8 +87,8 @@
                         width: 45%;
                     }
                     .job-description {
-                        width: 100%;
-                        height: 100%;
+                        // width: 100%;
+                        height: 69%;
                         position: relative;
                         top: 10%;
                         h5 {
@@ -89,18 +96,23 @@
                             margin-bottom: 0.5rem;
                         }
                         textarea {
-                            height: 60%;
+                            height: 100%;
                             width: 100%;
+                            border-radius: 10px;
+                            padding: 1rem;
                         }
                     }
                 }
                 .form-footer {
                     border: 1px solid red;
                     padding: 8px 0;
+                    height: 10%;
                     display: flex;
                     justify-content: center;
+                   margin-top: 3%;
                     button {
                         padding: 6px 12px;
+                        border-radius: 5px;
                     }
                     button:first-child {
                         margin-right: 2%;
