--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -764,59 +764,71 @@ template {
     width: 75%;
     height: 89vh;
     color: #fff; }
-    .component-jobs .jobs-view .add-job .job-order-form {
-      border: 1px solid green;
-      width: 90%;
-      margin: 0 auto; }
-      .component-jobs .jobs-view .add-job .job-order-form .form-header {
-        text-align: center;
-        border: 1px solid red;
-        padding: 1rem 0; }
-        .component-jobs .jobs-view .add-job .job-order-form .form-header h4 {
-          font-size: 1.5rem; }
-      .component-jobs .jobs-view .add-job .job-order-form .form-body {
-        padding: 0 2rem;
+    .component-jobs .jobs-view .add-job {
+      height: 100%; }
+      .component-jobs .jobs-view .add-job .job-order-form {
+        border: 3px solid green;
+        width: 90%;
         height: 100%;
-        display: flex;
-        justify-content: space-between; }
-        .component-jobs .jobs-view .add-job .job-order-form .form-body h5 {
-          font-size: 1.25rem;
-          margin: 1% 0; }
-        .component-jobs .jobs-view .add-job .job-order-form .form-body .input-group {
-          margin-bottom: 0.5rem; }
-          .component-jobs .jobs-view .add-job .job-order-form .form-body .input-group h6 {
-            font-size: 1rem;
-            margin-bottom: 0.25rem; }
-          .component-jobs .jobs-view .add-job .job-order-form .form-body .input-group input {
-            padding: 6px 2px;
-            border-radius: 5px; }
-          .component-jobs .jobs-view .add-job .job-order-form .form-body .input-group select {
-            padding: 6px 2px;
-            border-radius: 5px; }
-        .component-jobs .jobs-view .add-job .job-order-form .form-body .form-right-side {
-          width: 50%; }
-        .component-jobs .jobs-view .add-job .job-order-form .form-body .form-left-side {
-          width: 45%; }
-        .component-jobs .jobs-view .add-job .job-order-form .form-body .job-description {
-          width: 100%;
-          height: 100%;
-          position: relative;
-          top: 10%; }
-          .component-jobs .jobs-view .add-job .job-order-form .form-body .job-description h5 {
-            text-align: center;
+        margin: 0 auto; }
+        .component-jobs .jobs-view .add-job .job-order-form .form-header {
+          text-align: center;
+          border: 1px solid red;
+          height: 10%;
+          display: flex;
+          justify-content: center;
+          align-items: center; }
+          .component-jobs .jobs-view .add-job .job-order-form .form-header h4 {
+            font-size: 1.5rem; }
+        .component-jobs .jobs-view .add-job .job-order-form .form-body {
+          padding: 0 2rem;
+          height: 70%;
+          margin-top: 2%;
+          border: 3px solid orange;
+          display: flex;
+          justify-content: space-between; }
+          .component-jobs .jobs-view .add-job .job-order-form .form-body h5 {
+            font-size: 1.25rem;
+            margin: 1% 0; }
+          .component-jobs .jobs-view .add-job .job-order-form .form-body .input-group {
             margin-bottom: 0.5rem; }
-          .component-jobs .jobs-view .add-job .job-order-form .form-body .job-description textarea {
-            height: 60%;
-            width: 100%; }
-      .component-jobs .jobs-view .add-job .job-order-form .form-footer {
-        border: 1px solid red;
-        padding: 8px 0;
-        display: flex;
-        justify-content: center; }
-        .component-jobs .jobs-view .add-job .job-order-form .form-footer button {
-          padding: 6px 12px; }
-        .component-jobs .jobs-view .add-job .job-order-form .form-footer button:first-child {
-          margin-right: 2%; }
+            .component-jobs .jobs-view .add-job .job-order-form .form-body .input-group h6 {
+              font-size: 1rem;
+              margin-bottom: 0.25rem; }
+            .component-jobs .jobs-view .add-job .job-order-form .form-body .input-group input {
+              padding: 6px 2px;
+              border-radius: 5px; }
+            .component-jobs .jobs-view .add-job .job-order-form .form-body .input-group select {
+              padding: 6px 2px;
+              border-radius: 5px; }
+          .component-jobs .jobs-view .add-job .job-order-form .form-body .form-right-side {
+            width: 50%; }
+          .component-jobs .jobs-view .add-job .job-order-form .form-body .form-left-side {
+            width: 45%; }
+          .component-jobs .jobs-view .add-job .job-order-form .form-body .job-description {
+            height: 69%;
+            position: relative;
+            top: 10%; }
+            .component-jobs .jobs-view .add-job .job-order-form .form-body .job-description h5 {
+              text-align: center;
+              margin-bottom: 0.5rem; }
+            .component-jobs .jobs-view .add-job .job-order-form .form-body .job-description textarea {
+              height: 100%;
+              width: 100%;
+              border-radius: 10px;
+              padding: 1rem; }
+        .component-jobs .jobs-view .add-job .job-order-form .form-footer {
+          border: 1px solid red;
+          padding: 8px 0;
+          height: 10%;
+          display: flex;
+          justify-content: center;
+          margin-top: 3%; }
+          .component-jobs .jobs-view .add-job .job-order-form .form-footer button {
+            padding: 6px 12px;
+            border-radius: 5px; }
+          .component-jobs .jobs-view .add-job .job-order-form .form-footer button:first-child {
+            margin-right: 2%; }
     .component-jobs .jobs-view .job-queue {
       height: 100%;
       text-align: center; }
