--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,3 +5,4 @@
 @import './components/PropertyWizard';
 @import './components/WorkOrders';
 @import './components/Transactions';
+@import './components/Pagination';
