--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,9 @@
 $btn-blue: #0786FC;
 $btn-grey: #4D5765;
 
+$primary-blue: #009DDB;
+$light: #F9FDFF;
+
 
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700');
