--- a/src/styles/components/_LandingPage.scss
+++ b/src/styles/components/_LandingPage.scss
@@ -1,26 +1,60 @@
 @import '../variables';
 .component-landing-page {
     font-family: $font-main;
+    color: $light;
+    .section-header {
+        text-align: center;
+        font-size: 1.75rem;
+    }
+    .nav {
+        position: absolute;
+        width: 100%;
+        height: 14%;
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 0 1rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .nav-logo {
+            display: flex;
+            align-items: center;
+            h1 {
+                font-size: 2.75rem;
+                margin: 0;
+                span {
+                    color: $primary-blue;
+                }
+            }
+        }
+        .nav-links {
+            display: flex;
+            align-items: center;
+            .nav-link {
+                padding-right: 10%;
+                padding-top: 2%;
+                font-size: 1.1rem;
+            } // .nav-link:last-child {
+            //     padding-right: 0;
+            // }
+        }
+    }
     .header {
-        background-image: url('../assets/images/bg-main3.jpg');
+        background-image: linear-gradient(rgba(0, 100, 148, 0.35), rgba(0, 100, 148, 0.35)), url('../assets/images/bg-main2.jpg');
         background-size: cover;
         background-position: center;
         height: 100vh;
-        .header-content {
-            .header-logo {
-                text-align: center;
-                padding-top: 1rem;
-                margin-bottom: 5%;
-                h1 {
-                    margin: 0;
-                    font-size: 4rem;
-                    color: white;
-                }
+        padding-top: 10%;
+        .header-container {
+            display: flex;
+            width: 90%;
+            margin: 0 auto;
+            .header-content {
+                width: 50%;
             }
             .header-form {
-                background-color: rgba(0, 0, 0, 0.9);
+                background-color: rgba(0, 0, 0, 0.75);
                 width: 50%;
-                min-height: 60vh;
+                height: 25rem;
                 margin: 0 auto;
                 color: white;
                 padding: 2rem;
@@ -79,19 +113,59 @@
                     width: 75%;
                     margin: 0 auto;
                     margin-top: 15px;
-                    
                     button {
                         padding: 10px;
                         background-color: $btn-blue;
                         width: 100%;
                         border: none;
-                        &:hover{
+                        &:hover {
                             cursor: pointer;
                         }
                         h4 {
                             font-size: 1.5rem;
                             color: #fff;
                         }
+                    }
+                }
+            }
+        }
+    }
+    .services {
+        background-color: #36393F;
+        padding: 2rem 0;
+        .services-container {
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-around;
+            margin-top: 1.5rem;
+            .service-box {
+                width: 30%;
+                height: 16rem;
+                text-align: center;
+                padding: 1rem;
+                .box-header {
+                    margin-bottom: 3%;
+                    h5 {
+                        font-size: 1.5rem;
+                    }
+                }
+                .box-icon {
+                    height: 6rem;
+                    width: 6em;
+                    background-color: $primary-blue;
+                    margin: 0 auto;
+                    border-radius: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin-bottom: 4%;
+                    i {
+                        font-size: 3rem;
+                    }
+                }
+                .box-description {
+                    p {
+                        font-size: 1.125rem;
                     }
                 }
             }
